--- a/template/serviceaccount.tmpl
+++ b/template/serviceaccount.tmpl
@@ -1,8 +1,10 @@
 module "serviceaccount" {
-  source = "github.com/ministryofjustice/cloud-platform-terraform-serviceaccount?ref=0.8.2"
+  source = "github.com/ministryofjustice/cloud-platform-terraform-serviceaccount?ref=0.9.4"
 
   namespace = var.namespace
   kubernetes_cluster = var.kubernetes_cluster
+
+  serviceaccount_token_rotated_date = "01-01-2000"
 
   # Uncomment and provide repository names to create github actions secrets
   # containing the ca.crt and token for use in github actions CI/CD pipelines
